White space issue half resolved

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -600,7 +600,6 @@ label[for="select"]{
     text-align: left;
 }
 .blog-content p{
-    white-space:pre;
     color: #7c7c8c;
 }
 .parameter p{
